--- a/ASP.NET Developer Lynda Courses/ExploreCaliforniaMVCWithData/ExploreCaliforniaMVCWithData.csproj
+++ b/ASP.NET Developer Lynda Courses/ExploreCaliforniaMVCWithData/ExploreCaliforniaMVCWithData.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore" Version="1.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
