--- a/ASP.NET Developer Lynda Courses/ExploreCaliforniaMVCWithData/ExploreCaliforniaMVCWithData.csproj
+++ b/ASP.NET Developer Lynda Courses/ExploreCaliforniaMVCWithData/ExploreCaliforniaMVCWithData.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="api\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\scripts\jquery-3.1.1.min.js" />
+    <None Include="wwwroot\scripts\site.js" />
   </ItemGroup>
 
   <ItemGroup>
